# sqlsense

./: .gitignore  PLAN.md  README.md  pyproject.toml
docs/: brief.md
scripts/: generate_fixtures.sh  seed_testdb.sql
sqlsense/: cli.py  db.py  explain.py  lint.py  parser.py  summary.py
tests/: test_lint.py  test_parser.py  test_summary.py
tests/fixtures/: aggregate.json  hash_join.json  index_scan.json  index_scan_filtered.json  nested_loop.json  seq_scan.json  sort_limit.json  sort_spill.json
