[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlsense"
version = "0.1.0.dev0"
description = "Explains SQL query plans in plain English and tells you exactly what index to add"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "psycopg2-binary>=2.9",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sqlsense = "sqlsense.cli:main"

[tool.setuptools.packages.find]
include = ["sqlsense*"]
